<resources>
    <string name="app_name">SQLite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fab_description">FAB</string>
    <string name="text_npm">NPM</string>
    <string name="text_nama">Nama</string>
    <string name="text_jurusan">Jurusan</string>
    <string name="button_simpan">Simpan</string>
    <string name="button_ubah">Ubah</string>
    <string name="button_batal">Batal</string>
    <string name="text_view_mahasiswa">Tampil Data Mahasiswa</string>
    <string name="text_add_mahasiswa">Tambah Data Mahasiswa</string>
    <string name="text_edit_mahasiswa">Ubah Data Mahasiswa</string>
    <string name="text_dash">-</string>
</resources>